fix(explorer): sighly lower padding on small screen
By using a `1.2rem` padding on x axis instead of `2rem`, this add 26
more pixable for content (13 on each side). A sizable difference on
screen with less than 576px horizontally.

--- a/mithril-explorer/src/app/explorer.module.css
+++ b/mithril-explorer/src/app/explorer.module.css
@@ -1,5 +1,11 @@
 .container {
-  padding: 0 2rem;
+  padding: 0 1.2rem;
+}
+
+@media (min-width: 576px) {
+  .container {
+    padding: 0 2rem;
+  }
 }
 
 .main {
